style: fix overflow section six bug

--- a/src/components/section-six/style.scss
+++ b/src/components/section-six/style.scss
@@ -11,6 +11,8 @@
 
     gap: 30px;
 
+    overflow: hidden;
+
     .c-s-6-content-align {
         position: relative;
         
@@ -58,5 +60,11 @@
             background-color: #616bd4;
             box-shadow: 0 8px 15px rgba(0,0,0,.2);
         }
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .container-section-6 {
+        align-items: start;
     }
 }
